# ebpf-verifier

./: .Makefile.swp  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  asm_stubs.h  bitcode_files.txt  bitcode_files_5.18.8.txt  build_bitcode_needed.sh  clan_cmds_mod.sh  clang_cmds.sh  clang_cmds_5.18.8.sh  compile_cmd_targets.txt  current.c  dirs_of_verifier_deps.txt  err_clang  fd.c  good_config  harness  harness_5.18.8  included_headers.txt  included_headers_5.18.8.txt  init.c  jump.h  kernel_src_files.txt  long_clang_command.sh  main.c  main_5.18.8.c  memory.c  memory.h  other.h  ptr_store.h  raw  refcount.h  runtime.c  runtime.h  runtime_5.18.8.bc  runtime_5.18.8.c  (+12 more)
5.15/: Makefile
5.15.51/: Makefile
5.18.8/: Makefile  bitcode_files.txt  included_headers.txt  runtime.c
asm_stubs/: Kbuild  acenv.h  acpi.h  alternative-macros.h  alternative.h  apple_m1_pmu.h  arch_gicv3.h  arch_timer.h  archrandom.h  arm-cci.h  arm_dsu_pmu.h  asm-bug.h  asm-extable.h  asm-offsets.h  asm-prototypes.h  asm-uaccess.h  asm_pointer_auth.h  assembler.h  atomic.h  atomic_ll_sc.h  atomic_lse.h  barrier.h  bitops.h  bitrev.h  boot.h  brk-imm.h  bug.h  cache.h  cacheflush.h  checksum.h  clocksource.h  cmpxchg.h  compat.h  compiler.h  cpu.h  cpu_ops.h  cpufeature.h  cpuidle.h  cputype.h  current.h  (+138 more)
backup/: README
backup/5.15.0_clang/: vmlinux.h
backup/5.18.8_clang/: vmlinux.h
cmake/: options.cmake  settings.cmake
header_stubs/linux/: ctype.h  current.h  sched.h  sig.h  signal.h  slab.h  stat.h  uaccess.h
hello-ebpf/: hello.bpf.c  hello.c  hello.skel.h
integrate/: Makefile  main.c  my_unistd.h  syscall.bc  syscall.c
integrate/5.18.8/: clang_cmds.sh  included_headers.txt
libbpf/: .gitignore  CMakeLists.txt  Makefile_special
link_errors/: error_output_raw.txt  func_decls.txt  func_names.txt
link_errors/scripts/: get_info.py
linux/: .gitignore  5_2_kernel_src_files.txt  CMakeLists.txt  Makefile  README.md  cred.h  current.h  found_src_files.txt  full_kernel_src_files_5_18.txt  included_headers.txt  kernel_src_files.txt  sched.h  signal.h  test.c
linux/header_stubs/: all_test.h  atomic-instrumented.h  atomics.h  cred.h  current.h  file.h  fs.h  header_stubs.h  irqflags.h  kernel.h  lock.h  mm.h  mm_types.h  net_core_filter_wrapper.h  percpu-defs.h  percpumask.h  preempt.h  printk.h  quirks.h  refcount.h  sched.h  sched_jobctl.h  sched_signal.h  sched_task.h  sig.h  signal.h  slab.h  smp.h  syscalls.h  thread_info.h  topology.h  uaccess.h  workqueue.h
linux/scripts/: check_version.cmake  clang_cmds.py
lists/: target_outputs.txt  verifier_deps_raw.txt
old/: build_bitcode_needed.sh  compile_to_llvm_bitcode.sh  compile_to_llvm_ir.sh  main.c  old_main.c
old/scripts/: compile_included.py  gen_llvm_bitcode.py  lots_of_bc_clang.py
old_headers/: bug.h  other.h
sample/src/: Makefile  minimal  minimal.bpf.c  minimal.c  minimal.skel.h  test.c  trivial  trivial.bpf.c  trivial.c  trivial.skel.h  unistd_wrapper.h
samples/: bootstrap.bpf.c  bootstrap_loader.c  bounded_loop.bpf.c  bounded_loop_loader.c  fentry_loader.c  hello.bpf.c  hello_loader.c  infinite_loop.bpf.c  infinite_loop_loader.c  kprobe_loader.c  minimal_legacy_loader.c  profile_loader.c  s.bpf.c  s_loader.c  sockfilter_loader.c  stack_read.bpf.c  stack_read_loader.c  uprobe_loader.c  usdt.bpf.c  usdt_loader.c
scripts/: Makefile_special  clang_cmds.py  compile_included.py  deps_clean.py  func_decls.txt  gen_llvm_bitcode.py  ifdefgen.py  implicit_def_scraper.py  loader_generator.py  raw.txt  stub.sh
scripts/link_errors/: error_output_raw.txt  func_decls.txt  func_names.txt
src/: current.c  init.c  loader.c  loader_template.c  memory.c  my_syscall.c  ptr_store.c  runtime.c  s.bpf.c  s.c  sample.bpf.c  sample.c  test.c  test.h
syscall_test/: Makefile  bpf.c  main.c  prog  syscall.c
